[tool.poetry]
name = "repl_nix_site-WUJINGYI112233"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
typogrify = "^2.0.7"
Jinja2 = "^3.1.2"
pygame = "^2.1.2"
Flask-Cors = "^3.0.10"
pytest-browser = "^0.2.0"
pytz = "^2022.6"
fabric = "^2.7.1"
Pillow = "^9.3.0"
gevent = "^22.10.2"
javascript = "^2015.32.59"
pelican = "^4.8.0"
bs4 = "^0.0.1"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
